--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "cli.js",
   "scripts": {
-    "start": "node --trace-warnings ./index.js ",
+    "start": "http-server .",
     "create": "node index.js create ",
     "test": "echo \"Error: no test specified\" && exit 1",
 	"push": "surge cdn",
-	"e": "node index.js create example-element",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook -o cdn/docs --docs",
     "dev": "http-server ./cdn"
