--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "http-server .",
     "create": "node index.js create ",
     "test": "echo \"Error: no test specified\" && exit 1",
-	"push": "surge cdn",
+	"push": "git push && surge cdn",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook -o cdn/docs --docs",
     "dev": "http-server ./cdn"
